tests/baselines/reference/assignmentToVoidZero2.errors.txt
assignmentToVoidZero2.js(2,9): error TS2339: Property 'k' does not exist on type 'typeof import("assignmentToVoidZero2")'.
assignmentToVoidZero2.js(5,3): error TS2339: Property 'y' does not exist on type 'typeof o'.
assignmentToVoidZero2.js(6,9): error TS2339: Property 'y' does not exist on type 'typeof o'.
assignmentToVoidZero2.js(10,10): error TS2339: Property 'q' does not exist on type 'C'.
assignmentToVoidZero2.js(13,9): error TS2339: Property 'q' does not exist on type 'C'.
importer.js(1,13): error TS2305: Module '"./assignmentToVoidZero2"' has no exported member 'k'.


==== assignmentToVoidZero2.js (5 errors) ====
    exports.j = 1;
    exports.k = void 0;
            ~
!!! error TS2339: Property 'k' does not exist on type 'typeof import("assignmentToVoidZero2")'.
    var o = {}
    o.x = 1
    o.y = void 0
      ~
!!! error TS2339: Property 'y' does not exist on type 'typeof o'.
    o.x + o.y
            ~
!!! error TS2339: Property 'y' does not exist on type 'typeof o'.
    
    function C() {
        this.p = 1
        this.q = void 0
             ~
!!! error TS2339: Property 'q' does not exist on type 'C'.
    }
    var c = new C()
    c.p + c.q
            ~
!!! error TS2339: Property 'q' does not exist on type 'C'.
    
==== importer.js (1 errors) ====
    import { j, k } from './assignmentToVoidZero2'
                ~
!!! error TS2305: Module '"./assignmentToVoidZero2"' has no exported member 'k'.
    j + k
    